[gd_scene load_steps=26 format=4 uid="uid://dgs8qcvpr6g6e"]

[ext_resource type="PackedScene" uid="uid://dan6sqr2lahql" path="res://scenes/levels/level.tscn" id="1_2lm8n"]
[ext_resource type="Script" path="res://scenes/scripts/outside.gd" id="2_aybl5"]
[ext_resource type="PackedScene" uid="uid://dymaxum3cqom0" path="res://scenes/objects/gate.tscn" id="2_iw38d"]
[ext_resource type="Texture2D" uid="uid://bylymvwr8mfu7" path="res://graphics/ground/stones.png" id="3_o5473"]
[ext_resource type="Texture2D" uid="uid://g4wdm8vwjykc" path="res://graphics/tilesets/outside_walls.png" id="4_02p6a"]
[ext_resource type="Texture2D" uid="uid://cnp2qrtmqbs5q" path="res://graphics/tilesets/soil.png" id="5_gs6bc"]
[ext_resource type="Texture2D" uid="uid://cju3niiybg70k" path="res://graphics/decals/dirt_patch.png" id="6_tbaqy"]
[ext_resource type="Texture2D" uid="uid://mjv6j2v0atli" path="res://graphics/decals/moss/moss_1.png" id="7_ftldw"]
[ext_resource type="Texture2D" uid="uid://dv8iyi5sxa68q" path="res://graphics/decals/moss/moss_2.png" id="8_ao3an"]
[ext_resource type="Texture2D" uid="uid://4nk5ja4srqpn" path="res://graphics/decals/moss/moss_3.png" id="9_eml7a"]
[ext_resource type="Texture2D" uid="uid://67mt1qikp88u" path="res://graphics/decals/moss/moss_4.png" id="10_exyh5"]
[ext_resource type="Texture2D" uid="uid://jdwhe0klrw3c" path="res://graphics/decals/moss/moss_5.png" id="11_v6udn"]
[ext_resource type="PackedScene" uid="uid://bs2fp8h2gw1wn" path="res://scenes/houses/house.tscn" id="12_jkkh7"]
[ext_resource type="PackedScene" uid="uid://dwyax1rouxnir" path="res://scenes/objects/steam_vent.tscn" id="13_edyof"]
[ext_resource type="PackedScene" uid="uid://dsccmta6vnx1l" path="res://scenes/objects/light_fan_animation.tscn" id="14_hs7sj"]
[ext_resource type="PackedScene" uid="uid://d0fow7t21d6cx" path="res://scenes/enemies/scout.tscn" id="16_acte4"]
[ext_resource type="PackedScene" uid="uid://dh3irxniuommq" path="res://scenes/objects/crate.tscn" id="17_nqu5h"]
[ext_resource type="PackedScene" uid="uid://dhsbihm8b3p21" path="res://scenes/enemies/bug.tscn" id="19_ifjca"]
[ext_resource type="PackedScene" uid="uid://omd3vbv66tyf" path="res://scenes/objects/item_spawner.tscn" id="19_r4gd5"]
[ext_resource type="PackedScene" uid="uid://b32sf3y3f6tvw" path="res://scenes/enemies/drone.tscn" id="20_ql1ig"]
[ext_resource type="PackedScene" uid="uid://c8like5b774ld" path="res://scenes/enemies/car.tscn" id="21_lrhdk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jxris"]
resource_name = "walls"
texture = ExtResource("4_02p6a")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-66.7865, -65.1028, 195, -58.368, 195, 58.368, -66.7865, 62.8579)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -59.4905, 195, -58.368, 195, 58.368, -195, 59.4905)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -58.368, 66.7865, -65.1028, 66.7865, 61.7354, -195, 59.4905)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-56.6843, -62.8579, 61.1742, -62.8579, 58.9293, 195, -57.8068, 195)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-58.6899, -59.397, 195, -59.397, 195, 57.9827, 58.6898, 59.397, 57.2757, 195, -57.2757, 195)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -57.9827, 60.1041, -56.5686, 58.6898, 195, -57.2756, 195, -57.2756, 57.9828, -195, 59.397)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-58.9293, -195, 57.8068, -195, 58.9293, 195, -57.8068, 195)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.2756, -195, 58.6899, -195, 61.5183, -59.397, 195, -57.9828, 195, 59.397, -58.6899, 60.8112)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.2756, -195, 58.6899, -195, 58.6899, 59.397, -195, 57.9828, -195, -57.9828, -57.2756, -57.9828)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.2757, -195, 57.2757, -195, 61.5183, 45.2548, -62.9325, 46.669)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c824c"]
resource_name = "soil"
texture = ExtResource("5_gs6bc")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_cmd6r"]
tile_size = Vector2i(390, 390)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 11
sources/0 = SubResource("TileSetAtlasSource_jxris")
sources/1 = SubResource("TileSetAtlasSource_c824c")

[sub_resource type="Curve2D" id="Curve2D_i77o7"]
_data = {
"points": PackedVector2Array(-830.622, -552.251, 830.622, 552.251, 2847, 405, 273.881, -125.716, -273.881, 125.716, 2842, 1728, 305.31, -179.594, -305.31, 179.594, -150, 1718, 457.965, -197.553, -457.965, 197.553, -1546, 3596, 579.19, 264.901, -579.19, -264.901, -3856, 3570, 179.594, 556.741, -179.594, -556.741, -5691, 2324, -215.513, 534.292, 215.513, -534.292, -5729, 519, -660.008, 148.165, 660.008, -148.165, -4600, -723, -493.883, -211.023, 493.883, 211.023, -1658, -531, -543.272, -224.492, 543.272, 224.492, -1008, 278, -170.614, -273.881, 170.614, 273.881, 2847, 405)
}
point_count = 11

[node name="Outside" instance=ExtResource("1_2lm8n")]
script = ExtResource("2_aybl5")

[node name="Ground_Soil#Gate" parent="." index="1" instance=ExtResource("2_iw38d")]
z_index = 1
position = Vector2(534, -903)

[node name="Soil" type="Sprite2D" parent="Ground" index="0"]
texture_repeat = 2
position = Vector2(-36, 1113)
texture = ExtResource("3_o5473")
region_enabled = true
region_rect = Rect2(0, 0, 20000, 14000)

[node name="TileMap" type="TileMap" parent="Ground" index="1"]
tile_set = SubResource("TileSet_cmd6r")
format = 2

[node name="Soil" type="TileMapLayer" parent="Ground/TileMap" index="1"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAJAP3/AQABAAEAAAAJAPz/AQABAAEAAAAJAP7/AQABAAEAAAALAP7/AQABAAEAAAAMAP7/AQABAAEAAAAMAP3/AQABAAEAAAAMAPz/AQABAAEAAAAJAPv/AQABAAEAAAAMAPv/AQABAAEAAAAJAAAAAQAAAAEAAAALAP//AQABAAEAAAAMAP//AQABAAEAAAAMAAAAAQABAAEAAAALAAAAAQABAAEAAAAKAAAAAQABAAEAAAAKAAEAAQABAAEAAAALAAEAAQABAAEAAAAMAAEAAQABAAEAAAAKAAIAAQABAAEAAAALAAIAAQABAAEAAAAMAAIAAQABAAEAAAALAAMAAQABAAEAAAAKAAMAAQABAAEAAAAMAAMAAQABAAEAAAAMAAQAAQABAAEAAAAMAAUAAQABAAEAAAALAAQAAQABAAEAAAAKAAQAAQABAAEAAAAKAAUAAQABAAEAAAAKAAYAAQABAAEAAAALAAUAAQABAAEAAAALAAYAAQABAAEAAAAMAAYAAQABAAEAAAALAAcAAQABAAEAAAAKAAcAAQABAAEAAAAMAAcAAQABAAEAAAAJAAEAAQAAAAEAAAAJAAIAAQAAAAEAAAAJAAMAAQAAAAEAAAAJAAQAAQAAAAEAAAAJAAUAAQAAAAEAAAAJAAYAAQAAAAEAAAAJAAcAAQAAAAEAAAAJAAgAAQAAAAEAAAAJAAkAAQAAAAEAAAAKAAgAAQABAAEAAAAKAAkAAQABAAEAAAALAAkAAQABAAEAAAALAAgAAQABAAEAAAAMAAkAAQABAAEAAAAMAAgAAQABAAEAAAAJAP//AQABAAEAAAANAPv/AQABAAEAAAANAPz/AQABAAEAAAANAP3/AQABAAEAAAANAP7/AQABAAEAAAAKAPv/AQABAAEAAAAKAPz/AQABAAEAAAAKAP3/AQABAAEAAAAKAP7/AQABAAEAAAAKAP//AQABAAEAAAALAPv/AQABAAEAAAALAPz/AQABAAEAAAALAP3/AQABAAEAAAAGAP//AQAAAAIAAAAHAP//AQABAAIAAAAIAP//AQABAAIAAAAGAPn/AQAAAAEAAAAGAPr/AQAAAAEAAAAGAPv/AQAAAAEAAAAGAPz/AQAAAAEAAAAGAP3/AQAAAAEAAAAGAP7/AQAAAAEAAAAHAPn/AQABAAEAAAAHAPr/AQABAAEAAAAHAPv/AQABAAEAAAAHAPz/AQABAAEAAAAHAP3/AQABAAEAAAAHAP7/AQABAAEAAAAIAPn/AQABAAEAAAAIAPr/AQABAAEAAAAIAPv/AQABAAEAAAAIAPz/AQABAAEAAAAIAP3/AQABAAEAAAAIAP7/AQABAAEAAAAJAPn/AQABAAEAAAAJAPr/AQABAAEAAAAKAPn/AQABAAEAAAAKAPr/AQABAAEAAAALAPn/AQABAAEAAAALAPr/AQABAAEAAAAMAPn/AQABAAEAAAAMAPr/AQABAAEAAAA=")
tile_set = SubResource("TileSet_cmd6r")

[node name="Walls" type="TileMapLayer" parent="Ground/TileMap" index="2"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAIAP//AAABAAAAAAAJAP//AAACAAEAAAAJAAAAAAAAAAIAAAAJAAEAAAAAAAIAAAAJAAIAAAAAAAIAAAAJAAMAAAAAAAIAAAAJAAQAAAAAAAIAAAAHAP//AAABAAIAAAAHAP7/AAAAAAIAAAAHAP3/AAACAAEAAAAGAP3/AAABAAAAAAAFAP3/AAAAAAAAAAAJAAUAAAAAAAIAAAD//woAAAABAAAAAAD+/woAAAABAAAAAAD9/woAAAABAAAAAAD8/woAAAABAAAAAAD7/woAAAABAAAAAAD6/woAAAABAAAAAAD5/woAAAABAAAAAAD4/woAAAABAAAAAAD3/woAAAABAAAAAAD2/woAAAABAAAAAAD1/woAAAABAAAAAAD0/woAAAABAAAAAADz/woAAAABAAAAAADy/woAAAABAAAAAADx/woAAAABAAAAAADw/woAAAABAAAAAADu/woAAAABAAIAAADv/woAAAABAAAAAADu/wkAAAAAAAIAAADu/wgAAAAAAAIAAADu/wcAAAAAAAIAAADu/wYAAAAAAAIAAADu/wUAAAAAAAIAAADu/wQAAAAAAAIAAADu/wMAAAAAAAIAAADu/wIAAAAAAAIAAADu/wEAAAAAAAIAAADu/wAAAAAAAAIAAADu////AAAAAAIAAADu//7/AAAAAAIAAADu//3/AAAAAAIAAADu//z/AAAAAAIAAADu//v/AAABAAEAAADv//v/AAABAAAAAADw//v/AAABAAAAAADx//v/AAABAAAAAADy//v/AAABAAAAAADz//v/AAABAAAAAAD0//v/AAABAAAAAAD1//v/AAABAAAAAAD2//v/AAABAAAAAAD3//v/AAABAAAAAAD4//v/AAABAAAAAAD5//v/AAABAAAAAAD6//v/AAABAAAAAAD8//v/AAACAAEAAAD7//v/AAABAAAAAAD8//z/AAABAAIAAAD9//z/AAACAAAAAAAAAAoAAAABAAAAAAABAAoAAAABAAAAAAACAAoAAAABAAAAAAADAAoAAAABAAAAAAAEAAoAAAABAAAAAAAFAAoAAAABAAAAAAAGAAoAAAABAAAAAAAHAAoAAAABAAAAAAAIAAoAAAABAAAAAAAJAAYAAAAAAAIAAAAJAAcAAAAAAAIAAAAJAAgAAAAAAAIAAAAJAAkAAAAAAAIAAAAJAAoAAAACAAIAAAAHAAcAAAAAAAIAAAAHAAgAAAACAAIAAAAGAAgAAAABAAAAAAADAAgAAAABAAIAAAAFAAgAAAABAAAAAAAEAAgAAAABAAAAAAAFAAYAAAAAAAIAAAAFAAcAAAAAAAMAAAADAAcAAAAAAAIAAAAHAAYAAAAAAAIAAAADAAYAAAACAAEAAAACAAUAAAABAAAAAAADAAUAAAABAAAAAAAEAAUAAAACAAAAAAAGAAUAAAAAAAAAAAAHAAUAAAACAAEAAAAFAAUAAAAAAAEAAAAAAAUAAAABAAEAAAABAAUAAAABAAAAAAAAAAYAAAAAAAIAAAAAAAcAAAAAAAIAAAAAAAgAAAAAAAIAAAAAAAkAAAAAAAMAAAACAAYAAAABAAEAAAACAAcAAAAAAAIAAAACAAgAAAAAAAIAAAACAAkAAAAAAAMAAAA=")
tile_set = SubResource("TileSet_cmd6r")

[node name="SteamVent" parent="Ground" index="2" instance=ExtResource("13_edyof")]
z_index = 1
position = Vector2(-35, -523)

[node name="SteamVent2" parent="Ground" index="3" instance=ExtResource("13_edyof")]
z_index = 1
position = Vector2(1172, -766)

[node name="SteamVent3" parent="Ground" index="4" instance=ExtResource("13_edyof")]
z_index = 1
position = Vector2(1498, -339)

[node name="Sprite2D" type="Sprite2D" parent="Ground" index="5"]
modulate = Color(0.717647, 0.87451, 0.694118, 0.921569)
position = Vector2(-698, 976)
texture = ExtResource("6_tbaqy")

[node name="Moss1" type="Sprite2D" parent="Ground" index="6"]
position = Vector2(2665, -35.9999)
rotation = -3.91975
texture = ExtResource("7_ftldw")

[node name="Moss2" type="Sprite2D" parent="Ground" index="7"]
position = Vector2(3545, 1724)
texture = ExtResource("8_ao3an")

[node name="Moss3" type="Sprite2D" parent="Ground" index="8"]
position = Vector2(3526, -46)
texture = ExtResource("9_eml7a")

[node name="Moss4" type="Sprite2D" parent="Ground" index="9"]
position = Vector2(3520, 719)
rotation = 1.69482
texture = ExtResource("10_exyh5")

[node name="Moss5" type="Sprite2D" parent="Ground" index="10"]
position = Vector2(3546, 1355)
texture = ExtResource("11_v6udn")

[node name="House" parent="Ground" index="11" instance=ExtResource("12_jkkh7")]
position = Vector2(-3085, 1169)

[node name="LightFanAnimation" parent="Ground" index="12" instance=ExtResource("14_hs7sj")]
position = Vector2(-2519, 1759)
frame_progress = 0.334476

[node name="ItemContainer" parent="Items" index="0" instance=ExtResource("19_r4gd5")]
position = Vector2(2296, -506)

[node name="Crate" parent="Items" index="1" instance=ExtResource("17_nqu5h")]
position = Vector2(-266, 993)
rotation = -4.74539

[node name="Crate2" parent="Items" index="2" instance=ExtResource("17_nqu5h")]
position = Vector2(-1049, 996)
rotation = -1.57292

[node name="Crate3" parent="Items" index="3" instance=ExtResource("17_nqu5h")]
position = Vector2(-666, 1341)
rotation = -3.13579

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="." index="5"]
color = Color(0.729412, 0.537255, 0.796078, 1)
energy = 0.75

[node name="Label" type="Label" parent="." index="6"]
offset_right = 40.0
offset_bottom = 23.0
text = "Something here"

[node name="Scout" parent="Enemies" index="0" instance=ExtResource("16_acte4")]
position = Vector2(7318, 259)

[node name="Drone" parent="Enemies" index="1" instance=ExtResource("20_ql1ig")]
position = Vector2(1177, 2798)

[node name="Bug" parent="Enemies" index="2" instance=ExtResource("19_ifjca")]
position = Vector2(2574, 3094)

[node name="Player" parent="." index="9"]
z_index = 2
position = Vector2(2058, 1421)
metadata/_edit_group_ = true

[node name="CarPath" type="Path2D" parent="." index="12"]
curve = SubResource("Curve2D_i77o7")
metadata/_edit_lock_ = true

[node name="Car" parent="CarPath" index="0" instance=ExtResource("21_lrhdk")]
position = Vector2(2847, 405)
rotation = 0.586754

[node name="LevelBarriers" type="Node2D" parent="." index="13"]

[connection signal="player_entered_gate" from="Ground_Soil#Gate" to="." method="_on_ground_soil_gate_player_entered_gate"]
[connection signal="player_entered" from="Ground/House" to="." method="_on_house_player_entered"]
[connection signal="player_exited" from="Ground/House" to="." method="_on_house_player_exited"]
